--- a/api/package.json
+++ b/api/package.json
@@ -3,44 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "@prisma/client": "^3.2.1",
-    "bcryptjs": "^2.4.3",
-    "connect-redis": "^6.0.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv-cli": "^4.0.0",
-    "dotenv-safe": "^8.2.0",
+    "axios": "^0.27.2",
     "express": "^4.18.1",
-    "express-session": "^1.17.1",
-    "ioredis": "^4.28.0",
-    "mkdirp": "^1.0.4",
-    "pm2": "^5.1.2",
-    "prisma": "^3.2.1",
-    "query-string": "^7.0.1",
-    "reflect-metadata": "^0.1.13",
-    "shortid": "^2.2.15"
+    "express-session": "^1.17.1"
   },
   "scripts": {
     "build": "npm -s run clean && tsc",
     "prod": "node dist/index.js",
-    "migrate": "npx prisma migrate dev --preview-feature",
-    "generate": "npx prisma generate",
     "start": "POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/boilerplate?schema=public NODE_ENV=development DEBUG=* REDIS_URL=redis://127.0.0.1:6379 ts-node-dev --respawn --transpile-only --no-notify src/index.ts"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.17",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
-    "@types/get-port": "^4.2.0",
-    "@types/ioredis": "^4.27.7",
-    "@types/mkdirp": "^1.0.2",
     "@types/node": "^16.11.0",
-    "@types/pg": "^8.6.1",
-    "@types/redis": "^2.8.32",
-    "@types/shortid": "^0.0.29",
     "jest": "^27.2.5",
     "supertest": "^6.1.6",
     "ts-node": "^10.3.0",
