--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.1"
   },
