--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "start": "POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/boilerplate?schema=public NODE_ENV=development DEBUG=* REDIS_URL=redis://127.0.0.1:6379 ts-node-dev --respawn --transpile-only --no-notify src/index.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.11.0",
