--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "npm -s run clean && tsc",
     "prod": "node dist/index.js",
-    "start": "POSTGRES_URL=postgresql://postgres:postgres@localhost:5432/boilerplate?schema=public NODE_ENV=development DEBUG=* REDIS_URL=redis://127.0.0.1:6379 ts-node-dev --respawn --transpile-only --no-notify src/index.ts"
+    "start": "NODE_ENV=development DEBUG=* ts-node-dev --respawn --transpile-only --no-notify src/index.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
